--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack-dev-server --mode development",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
@@ -18,6 +19,10 @@
   },
   "devDependencies": {
     "@eslint/js": "9.16.0",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "16.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "22.10.2",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
@@ -27,8 +32,11 @@
     "eslint-plugin-react": "7.37.2",
     "globals": "15.13.0",
     "html-webpack-plugin": "5.6.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.4.2",
     "style-loader": "4.0.0",
+    "ts-jest": "^29.2.5",
     "ts-loader": "9.5.1",
     "typescript": "5.7.2",
     "typescript-eslint": "8.18.0",
