--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,6 @@
     "isolatedModules": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "types": ["node", "jest", "@testing-library/jest-dom"]
 }
