--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "devDependencies": {
     "@eslint/js": "9.16.0",
     "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.1.0",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "29.5.14",
     "@types/node": "22.10.2",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
@@ -32,8 +32,8 @@
     "eslint-plugin-react": "7.37.2",
     "globals": "15.13.0",
     "html-webpack-plugin": "5.6.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "prettier": "3.4.2",
     "style-loader": "4.0.0",
     "ts-jest": "^29.2.5",
